--- a/package.xml
+++ b/package.xml
@@ -24,7 +24,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-*
+* [jan] Fix issues with certain locales like Turkish.
  </notes>
  <contents>
   <dir name="/">
@@ -551,7 +551,7 @@
    </stability>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-*
+* [jan] Fix issues with certain locales like Turkish.
    </notes>
   </release>
  </changelog>
