Now that all tests pass on PHP 7, bump supported PHP version at least for all packages that have tests.

--- a/package.xml
+++ b/package.xml
@@ -24,6 +24,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
+* [jan] Mark PHP 7 as supported.
 * [jan] Fix issues with certain locales like Turkish.
  </notes>
  <contents>
@@ -172,8 +173,8 @@
   <required>
    <php>
     <min>5.3.0</min>
-    <max>6.0.0alpha1</max>
-    <exclude>6.0.0alpha1</exclude>
+    <max>8.0.0alpha1</max>
+    <exclude>8.0.0alpha1</exclude>
    </php>
    <pearinstaller>
     <min>1.7.0</min>
@@ -551,6 +552,7 @@
    </stability>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
+* [jan] Mark PHP 7 as supported.
 * [jan] Fix issues with certain locales like Turkish.
    </notes>
   </release>
