--- a/composer.json
+++ b/composer.json
@@ -16,23 +16,22 @@
     "repositories": [
         {
             "type": "pear",
-            "url": "https://pear.horde.org"
+            "url": "http://pear.horde.org"
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "pear-pear.horde.org/Horde_Core": ">=2.0.0,<=3.0.0alpha1",
-        "pear-pear.horde.org/Horde_Icalendar": ">=2.0.0,<=3.0.0alpha1",
-        "pear-pear.horde.org/Horde_Argv": ">=2.0.0,<=3.0.0alpha1",
-        "pear-pear.horde.org/Horde_Exception": ">=2.0.0,<=3.0.0alpha1",
-        "pear-pear.horde.org/Horde_Mime": ">=2.0.0,<=3.0.0alpha1",
-        "pear-pear.horde.org/Horde_Util": ">=2.0.0,<=3.0.0alpha1",
-        "pear-pear.horde.org/Horde_Kolab_Server": ">=2.0.0,<=3.0.0alpha1"
+        "php": "^5.3,<8",
+        "pear-pear.horde.org/Horde_Core": "^2",
+        "pear-pear.horde.org/Horde_Icalendar": "^2",
+        "pear-pear.horde.org/Horde_Argv": "^2",
+        "pear-pear.horde.org/Horde_Exception": "^2",
+        "pear-pear.horde.org/Horde_Mime": "^2",
+        "pear-pear.horde.org/Horde_Util": "^2",
+        "pear-pear.horde.org/Horde_Kolab_Server": "^2"
     },
     "suggest": {
-        "pear-pear.horde.org/Horde_Notification": ">=2.0.0,<=3.0.0alpha1",
-        "pear-pear.horde.org/Horde_Prefs": ">=2.0.0,<=3.0.0alpha1",
-        "pear-pear.horde.org/Horde_Test": ">=2.1.0,<=3.0.0alpha1",
-        "pear-pear.phpunit.de/PHPUnit_Story": "*"
+        "pear-pear.horde.org/Horde_Notification": "^2",
+        "pear-pear.horde.org/Horde_Prefs": "^2",
+        "pear-pear.horde.org/Horde_Test": "^2.4"
     }
 }
