--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": "^5.3,<8",
+        "php": "^5.3 || ^7",
         "pear-pear.horde.org/Horde_Core": "^2",
         "pear-pear.horde.org/Horde_Icalendar": "^2",
         "pear-pear.horde.org/Horde_Argv": "^2",
@@ -33,5 +33,14 @@
         "pear-pear.horde.org/Horde_Notification": "^2",
         "pear-pear.horde.org/Horde_Prefs": "^2",
         "pear-pear.horde.org/Horde_Test": "^2.4"
+    },
+    "replace": {
+        "pear-pear.horde.org/Horde_Kolab_Filter": "0.*",
+        "pear-horde/Horde_Kolab_Filter": "0.*"
+    },
+    "autoload": {
+        "psr-0": {
+            "Horde_Kolab_Filter": "lib/"
+        }
     }
 }
