--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "horde/horde-kolab-filter",
+    "name": "horde/kolab-filter",
     "description": "Postfix filters for the Kolab server",
     "type": "library",
     "homepage": "https://pear.horde.org",
@@ -12,7 +12,7 @@
         }
     ],
     "version": "0.2.0",
-    "time": "2012-11-19",
+    "time": "2017-10-20",
     "repositories": [
         {
             "type": "pear",
