--- a/.horde.yml
+++ b/.horde.yml
@@ -2,11 +2,10 @@
 id: Kolab_Filter
 name: Kolab_Filter
 full: Kolab server Postfix filters library
-description: |+
+description: >
   The filters provided by this package implement the Kolab
   server resource management as well as some Kolab server sender
   policies.
-  
 list: dev
 type: library
 authors:
