--- a/.horde.yml
+++ b/.horde.yml
@@ -3,9 +3,8 @@ id: Kolab_Filter
 name: Kolab_Filter
 full: Kolab server Postfix filters library
 description: >
-  The filters provided by this package implement the Kolab
-  server resource management as well as some Kolab server sender
-  policies.
+  The filters provided by this package implement the Kolab server resource
+  management as well as some Kolab server sender policies.
 list: dev
 type: library
 authors:
