Update package definitions.

--- a/package.xml
+++ b/package.xml
@@ -2,18 +2,15 @@
 <package packagerversion="1.4.9" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
  <name>Horde_Kolab_Filter</name>
  <channel>pear.horde.org</channel>
- <summary>Postfix filters for the Kolab server</summary>
- <description>The filters provided by this package implement the Kolab
- server resource management as well as some Kolab server sender
- policies.
- </description>
+ <summary>Kolab server Postfix filters library</summary>
+ <description>The filters provided by this package implement the Kolab server resource management as well as some Kolab server sender policies.</description>
  <lead>
   <name>Gunnar Wrobel</name>
   <user>wrobel</user>
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2017-10-30</date>
+ <date>2017-11-14</date>
  <version>
   <release>0.2.0</release>
   <api>0.1.0</api>
@@ -231,7 +228,6 @@
    </package>
   </required>
   <optional>
-   <!-- Both are only required for testing -->
    <package>
     <name>Horde_Notification</name>
     <channel>pear.horde.org</channel>
@@ -508,7 +504,7 @@
    </notes>
   </release>
   <release>
-   <date>2017-10-30</date>
+   <date>2017-11-14</date>
    <version>
     <release>0.2.0</release>
     <api>0.1.0</api>
